--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body{
     color: orange;
 }
 h1 {
-    font-size: 40px;
+    font-size: 4vw;
+    text-align: center;
     font-weight: 700;
     color: #fbfbfb;
     font-family: "Libre Baskerville", serif;
@@ -81,7 +82,9 @@ h1:hover{
 }
 #about{
     animation: rot1 2s linear;
+ 
 }
+
 .imgg{
     display:flex;
     align-items: center;
@@ -92,8 +95,7 @@ h1:hover{
     background-color: transparent;
 }
 .about div a button img{
-    height:35px;
-    width:35px;
+    height:3vw;
     background-color: transparent;
 }
 @keyframes rot1 {
@@ -129,20 +131,22 @@ h4{
     font-weight: bolder;
     text-decoration:underline;
 }
-p{
+.pro p{
     letter-spacing: 1px;
+    font-size: 2vw;
+}
+h3{
+    font-size: 3vw;
 }
 .home1 #about{
     margin-top: 10%;
-    width: 50%;
+    width: 40%;
     margin-right: 5%;
     margin-left: 5%;
     font-weight: 500;
     font-size: 2.3vh;
 }
-#about p{
-    font-size: 100%;
-}
+
 .me{
     width:80px;
 }
@@ -213,7 +217,7 @@ p{
     padding-bottom: 100px;
     overflow: hidden;
     position: relative;
-
+    box-sizing: border-box;
     background: linear-gradient(to top, darkblue,blue, aqua) 1% 100%;
 }
 .navbar{
@@ -299,16 +303,16 @@ p{
     display:flex;
     flex-direction: column;
     justify-content: start;
-    align-items: center;
-    padding: 50px 100px;
+    padding: 50px 10px;
     position: relative;
     color:white;
       
   }
 .projects .static{
     display:flex;
-    align-items: stretch;
-    justify-content: space-around; 
+    margin:0px 0px;
+    justify-content: space-evenly; 
+
     
 }
 .pro:hover{
@@ -320,10 +324,15 @@ p{
     margin-right: 8px;
     border:1px solid gray;
     border-radius: 8px;
-    width:50%;
+    width:100%;
     text-align: center;
     background: linear-gradient(to right, rgba(120, 255, 244, 0.801),rgba(120, 190, 255, 0.801), rgb(192, 188, 223));
     transition: all ease 0.8s; 
+}
+.pro a button{
+    width:15vw;
+    font-size:2vw;
+    
 }
 .dynamic .pro{
     width:100%;
@@ -332,7 +341,7 @@ p{
    height:5vh;
    margin-bottom: 5px;
    background-color: white;
-   border-radius: 30%;
+   border-radius: 10px;
    border:none;
    font-weight: 700;
    box-shadow: 2px 2px 1px black
@@ -352,7 +361,6 @@ p{
     display:grid;
     grid-template-columns: 1fr 1fr;
     margin:0 20px;
-
     column-gap: 2em;
     row-gap: 2em;
 }
@@ -364,8 +372,10 @@ p{
     display:flex;
     flex-direction: column;
     cursor: pointer;
+    box-sizing: border-box;
     height:100%;
     width:100%;
+    
     
 }
 .drive:hover{
@@ -495,6 +505,7 @@ p{
     .cert{
         grid-template-columns: 1fr;
         justify-content: center;
+        margin:0 20px;
         
     }
     
