--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h1:hover{
     background-color: transparent;
 }
 .about div a button img{
-    height:3vw;
+    height:30px;
     background-color: transparent;
 }
 @keyframes rot1 {
